TestSuite/errors/err0544.pas
//!Повторное объявление
procedure Prm<T>(Self: array of T); extensionmethod; begin end;
procedure Prm<T>(Self: array of T); extensionmethod; begin end;

begin
end.